Release history for {{ $dist->name }}:

{{$NEXT}}

v0.1.1    2025-08-19 12:43:28+01:00 Europe/London
  [Bug Fixes]
  - Addded missing pragma to explicitly enable postderef.

  - Specified minimum version of Test::CVE.

  [Toolchain]
  - Added GitHub Workflow for testing.

v0.1.0    2025-08-18 21:31:01+01:00 Europe/London
  - Initial prototype published on CPAN.