@@ -62,6 +62,17 @@ repo = robrwo/perl-Dist-Zilla-Plugin-Test-CVE.git
 type     = gfm
 filename = README.md
 location = build
+section  = name
+section  = synopsis
+section  = description
+section  = recent changes
+section  = requirements
+section  = installation
+section  = security considerations
+section  = support
+section  = source
+section  = author
+section  = copyright and license
 
 [CopyFilesFromBuild]
 copy = LICENSE
