@@ -1,6 +1,10 @@
 Release history for {{ $dist->name }}:
 
 {{$NEXT}}
+  [Documentation]
+  - Added a discussion of the risks associated with the use/misuse of Test::CVE in the SECURITY CONSIDERATIONS.
+
+  - Include SECURITY CONSIDERATIONS in the README.
 
 v0.1.1    2025-08-19 12:43:28+01:00 Europe/London
   [Bug Fixes]
